--- a/index.html
+++ b/index.html
@@ -129,14 +129,15 @@
     }
 
     header img.profile {
-      width: 140px;
-      height: 140px;
-      border-radius: 50%;
-      border: 3px solid #7ee8fa;
-      user-select: none;
-      flex-shrink: 0;
-      object-fit: cover; /* ensures image covers circle without distortion */
-    }
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  border: 4px solid #7ee8fa;
+  object-fit: cover;
+  user-select: none;
+  flex-shrink: 0;
+  cursor: default;
+}
 
     section {
       max-width: 960px;
@@ -322,24 +323,16 @@
     }
 
     .cert-card img {
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 10px;
-      user-select: none;
-    }
+  width: 100%;
+  max-height: 120px; /* limit max height */
+  object-fit: contain; /* fit fully without cropping */
+  border-radius: 8px;
+  user-select: none;
+}
 
     .scroll-btn {
-      background: #00bfff;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      font-size: 20px;
-      width: 40px;
-      height: 40px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      user-select: none;
-    }
+  display: none;
+}
 
     .scroll-btn:hover {
       background: #0099cc;
