--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      cursor: none;
+      /* Removed cursor:none to enable normal cursor */
     }
 
     html {
@@ -56,7 +56,7 @@
       position: fixed;
       top: 0;
       width: 100%;
-      padding: 10px 30px; /* reduced padding for shorter menu */
+      padding: 10px 30px; /* shorter header menu */
       background: rgba(0, 0, 0, 0.4);
       backdrop-filter: blur(10px);
       z-index: 100;
@@ -78,6 +78,7 @@
       margin: 0 15px;
       font-weight: bold;
       transition: color 0.3s ease;
+      /* prevent resizing on hover */
       transform: none !important;
     }
 
@@ -128,19 +129,19 @@
       font-size: 1rem;
     }
 
+    /* Profile photo styles */
     header img.profile {
-  width: 180px;
-  height: 180px;
-  border-radius: 50%;
-  border: 4px solid #7ee8fa;
-  object-fit: cover;
-  user-select: none;
-  flex-shrink: 0;
-  cursor: default;
-  display: block;
-  /* Optional: add subtle shadow for nicer look */
-  box-shadow: 0 0 15px rgba(0, 191, 255, 0.6);
-}
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      border: 4px solid #7ee8fa;
+      object-fit: cover;
+      user-select: none;
+      flex-shrink: 0;
+      cursor: default;
+      display: block;
+      box-shadow: 0 0 15px rgba(0, 191, 255, 0.6);
+    }
 
     section {
       max-width: 960px;
@@ -175,23 +176,7 @@
       padding: 20px;
     }
 
-    .left .text {
-      order: 2;
-    }
-
-    .left img {
-      order: 1;
-    }
-
-    .right .text {
-      order: 1;
-    }
-
-    .right img {
-      order: 2;
-    }
-
-    /* Trip planner: text left, images right, keep images properties */
+    /* Trip planner text on left, images on right, images keep style */
     .project.left:nth-child(3) {
       display: flex;
       flex-wrap: nowrap;
@@ -207,13 +192,9 @@
       order: 2;
       margin-top: 0;
       flex-shrink: 0;
-    }
-
-    .trip-planner-screenshots {
-      position: relative;
       width: 320px;
       height: 430px;
-      margin-top: 40px;
+      position: relative;
     }
 
     .trip-planner-screenshots img {
@@ -295,7 +276,7 @@
       position: relative;
     }
 
-    /* Removed horizontal scroll for reviews */
+    /* Remove scroll on review cards, show all cards inline */
     .card-wrapper {
       display: flex;
       gap: 20px;
@@ -325,28 +306,25 @@
       transform: scale(1.05);
     }
 
+    /* Uniform review images */
     .cert-card img {
-  width: 100%;
-  max-height: 120px;
-  object-fit: contain;
-  border-radius: 8px;
-  user-select: none;
-  transition: transform 0.3s ease;
-}
-    .cert-card:nth-child(3) img {
-  max-height: 160px;
-}
-
-    .scroll-btn {
-  display: none;
-}
-
-    .scroll-btn:hover {
-      background: #0099cc;
+      width: 100%;
+      max-height: 120px;
+      object-fit: contain;
+      border-radius: 8px;
+      user-select: none;
+      transition: transform 0.3s ease;
     }
 
-    .scroll-btn.left { margin-right: 10px; }
-    .scroll-btn.right { margin-left: 10px; }
+    /* Bigger image for review3 */
+    .cert-card:nth-child(3) img {
+      max-height: 160px;
+    }
+
+    /* Hide scroll buttons */
+    .scroll-btn {
+      display: none;
+    }
 
     footer {
       text-align: center;
@@ -395,9 +373,9 @@
         height: auto;
       }
       .trip-planner-screenshots img {
-        position: relative;
+        position: relative !important;
         margin: 10px auto;
-        animation: none;
+        animation: none !important;
         top: auto !important;
         left: auto !important;
         transform: scale(1) !important;
@@ -405,6 +383,7 @@
       }
     }
 
+    /* Shooting stars, shooting tip-first */
     .shooting-stars {
       position: fixed;
       top: 0;
@@ -418,48 +397,45 @@
     }
 
     .shooting-stars::before,
-.shooting-stars::after {
-  content: '';
-  position: absolute;
-  top: -10%;
-  width: 3px;
-  height: 80px;
-  background: linear-gradient(0deg, white 0%, rgba(255,255,255,0) 100%);
-  filter: drop-shadow(0 0 6px white);
-  opacity: 0.7;
-  border-radius: 50%;
-  animation: shoot 3.5s linear infinite;
-  transform-origin: bottom center;  /* changed from left center */
-}
-
-.shooting-stars::before {
-  left: 20%;
-  animation-delay: 0s;
-}
-
-.shooting-stars::after {
-  left: 60%;
-  animation-delay: 1.7s;
-}
-
-@keyframes shoot {
-  0% {
-    transform: translate(0, 0) rotate(45deg);
-    opacity: 0;
-  }
-  10% {
-    opacity: 1;
-  }
-  100% {
-    transform: translate(120vw, 120vh) rotate(45deg);
-    opacity: 0;
-  }
-}
-
-    body * {
-      transition: transform 0.3s ease, color 0.3s ease;
+    .shooting-stars::after {
+      content: '';
+      position: absolute;
+      top: -10%;
+      width: 3px;
+      height: 80px;
+      background: linear-gradient(0deg, white 0%, rgba(255,255,255,0) 100%);
+      filter: drop-shadow(0 0 6px white);
+      opacity: 0.7;
+      border-radius: 50%;
+      animation: shoot 3.5s linear infinite;
+      transform-origin: bottom center;  /* tip is bottom center */
     }
 
+    .shooting-stars::before {
+      left: 20%;
+      animation-delay: 0s;
+    }
+
+    .shooting-stars::after {
+      left: 60%;
+      animation-delay: 1.7s;
+    }
+
+    @keyframes shoot {
+      0% {
+        transform: translate(0, 0) rotate(45deg);
+        opacity: 0;
+      }
+      10% {
+        opacity: 1;
+      }
+      100% {
+        transform: translate(120vw, 120vh) rotate(45deg);
+        opacity: 0;
+      }
+    }
+
+    /* Prevent header menu resizing on hover */
     nav a:hover {
       transform: none !important;
     }
@@ -613,7 +589,7 @@
       });
     });
 
-    // Scroll cards function
+    // Scroll cards function (not used because buttons hidden)
     function scrollCards(direction) {
       const wrapper = document.getElementById('cardWrapper');
       const scrollAmount = 240;
