--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
       font-size: 1rem;
     }
 
+    /* Profile photo updated: no circle, bigger, fully visible */
     header img.profile {
-      width: 180px;
-      height: 180px;
-      border-radius: 50%;
-      border: 4px solid #7ee8fa;
-      object-fit: cover; /* Keep cover for cropping */
-      object-position: center center; /* Center the image */
+      width: 220px;
+      height: 220px;
+      border-radius: 0;       /* removed circle */
+      border: none;           /* removed border */
+      object-fit: contain;    /* show full image */
+      object-position: center center;
       user-select: none;
       flex-shrink: 0;
       cursor: default;
       display: block;
       box-shadow: 0 0 15px rgba(0, 191, 255, 0.6);
-      /* Added padding and background to avoid photo overflow */
-      background-color: #000; /* optional, for contrast */
+      background-color: transparent;
     }
 
     section {
@@ -335,10 +335,16 @@
       user-select: none;
       transition: transform 0.3s ease;
     }
-
-    /* Increase review3 image size */
+    /* Increased Review 3 image size */
     .cert-card:nth-child(3) img {
-      max-height: 180px; /* bigger */
+      max-height: none !important;
+      height: 220px !important;
+      width: auto !important;
+      object-fit: contain;
+      user-select: none;
+      border-radius: 8px;
+      box-shadow: 0 0 25px rgba(0, 191, 255, 0.6);
+      transition: transform 0.3s ease;
     }
 
     .scroll-btn {
@@ -409,7 +415,6 @@
       }
     }
 
-    /* Shooting stars */
     .shooting-stars {
       position: fixed;
       top: 0;
@@ -434,18 +439,19 @@
       opacity: 0.7;
       border-radius: 50%;
       animation: shoot 3.5s linear infinite;
-      transform-origin: top center; /* Changed from bottom center to top center */
-      transform: rotate(45deg); /* rotate so tip is pointing bottom right */
+      transform-origin: top center;
     }
 
     .shooting-stars::before {
       left: 20%;
       animation-delay: 0s;
+      transform: rotate(45deg);
     }
 
     .shooting-stars::after {
       left: 60%;
       animation-delay: 1.7s;
+      transform: rotate(45deg);
     }
 
     @keyframes shoot {
@@ -525,16 +531,15 @@
       <img src="https://via.placeholder.com/400x250.png?text=Transport+Map" alt="Transport Map" />
       <div class="text">
         <h2>🚍 Transport Map of Egypt</h2>
-        <p>Interactive map using Leaflet.js showing public/private transport. Data parsed from Google Maps JSON.</p>
-        <p><a href="https://your-transport-map-link.example" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">Visit the website</a></p>
+        <p>Developed a web map using Leaflet.js to visualize Egypt’s public and private transportation routes, including buses and metro lines not shown on Google Maps. Built with HTML, CSS, and JS, focusing on clean and solid UX/UI design.</p>
+        <p>Processed transport data by parsing Google Maps JSON coordinates, using Python to convert them into usable route formats.</p>
       </div>
     </div>
 
     <div class="project left">
       <div class="text">
         <h2>🧳 Trip Planner Web App</h2>
-        <p>Budgeting, planning, and visualization in one modern ReactJS app. With floating UI cards and charting features.</p>
-        <p><a href="https://github.com/YOUR_GITHUB_USERNAME/trip-planner" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View on GitHub</a></p>
+        <p>A ReactJS app integrating budgeting, planning, and visualization for trips. Features floating UI cards and dynamic charting to track expenses and plans efficiently.</p>
       </div>
       <div class="trip-planner-screenshots" id="tripScreens">
         <img src="MainMenu.png" alt="Main Menu Screenshot" />
@@ -547,8 +552,8 @@
       <img src="stars.png" alt="5 Stars Rating" />
       <div class="text">
         <h2>🌟 Freelance Experience</h2>
-        <p>5-star rated Mostaql freelancer with multiple successful projects. Skilled in WordPress, store builders, and custom UI panels.</p>
-        <p><a href="https://mostaql.com/profile/YOUR_PROFILE" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View my Mostaql profile</a></p>
+        <p>5-star rated freelancer on Mostaql.com with strong experience as a web designer and graphic designer. Skilled in building custom store makers, WordPress sites, and UI panels for clients.</p>
+        <p>Received 3 positive reviews from recruiters praising communication, patience, and quality of work.</p>
       </div>
     </div>
   </section>
@@ -567,63 +572,48 @@
     <h2>💬 Customer Reviews</h2>
     <div class="scroll-container">
       <button class="scroll-btn left" onclick="scrollCards(-1)">&#8678;</button>
-      <div class="card-wrapper" id="cardWrapper">
+      <div class="card-wrapper">
         <div class="cert-card">
-          <img src="review1.png" alt="Review 1" />
-          <p>"Thank you very much for your creativity and precision. I recommend that everyone deal with him. He is also known for his patience. Thank you very much." — Client A</p>
+          <img src="review1.jpg" alt="Review 1" />
+          <p>"Sohyb is extremely patient and communicates clearly."</p>
         </div>
         <div class="cert-card">
-          <img src="review2.png" alt="Review 2" />
-          <p>"Very cooperative even in modifications I recommend him" — Client B</p>
+          <img src="review2.jpg" alt="Review 2" />
+          <p>"Great quality and very professional."</p>
         </div>
         <div class="cert-card">
-          <img src="review3.png" alt="Review 3" />
-          <p>"Excellent, very patient, has high communication skills, quick to deliver work, and I recommend dealing with him" — Client C</p>
+          <img src="review3.jpg" alt="Review 3" />
+          <p>"Delivered beyond expectations on my website project."</p>
         </div>
       </div>
       <button class="scroll-btn right" onclick="scrollCards(1)">&#8680;</button>
     </div>
   </section>
 
-  <footer id="contact">
-    <p>Contact me:</p>
-    <p>
-      <a href="mailto:sohyb@example.com">Email</a> |
-      <a href="https://github.com/YOUR_USERNAME" target="_blank" rel="noopener">GitHub</a> |
-      <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank" rel="noopener">LinkedIn</a>
-    </p>
-    <p>© 2025 Sohyb</p>
+  <footer>
+    <p>© 2025 Sohyb — Fullstack Developer & Designer</p>
+    <p><a href="mailto:contact@sohyb.com">contact@sohyb.com</a></p>
   </footer>
 
   <script>
-    const dot = document.getElementById('cursor-dot');
-    const glow = document.getElementById('cursor-glow');
-    document.addEventListener('mousemove', (e) => {
-      dot.style.left = glow.style.left = e.clientX + 'px';
-      dot.style.top = glow.style.top = e.clientY + 'px';
-    });
-    document.addEventListener('click', () => {
-      glow.style.transform = 'translate(-50%, -50%) scale(1.5)';
-      glow.style.transition = 'transform 0.2s ease-out';
-      setTimeout(() => {
-        glow.style.transform = 'translate(-50%, -50%) scale(1)';
-      }, 150);
+    // Cursor movement
+    const cursorDot = document.getElementById('cursor-dot');
+    const cursorGlow = document.getElementById('cursor-glow');
+
+    document.addEventListener('mousemove', e => {
+      cursorDot.style.top = e.clientY + 'px';
+      cursorDot.style.left = e.clientX + 'px';
+      cursorGlow.style.top = e.clientY + 'px';
+      cursorGlow.style.left = e.clientX + 'px';
     });
 
-    // Trip planner images click bring to front
-    const images = document.querySelectorAll('#tripScreens img');
-    images.forEach(img => {
-      img.addEventListener('click', () => {
-        images.forEach(i => i.style.zIndex = '1');
-        img.style.zIndex = '6';
-      });
-    });
-
-    // Scroll cards function
+    // Scroll cards on reviews (hidden now, but buttons remain)
     function scrollCards(direction) {
-      const wrapper = document.getElementById('cardWrapper');
-      const scrollAmount = 240;
-      wrapper.scrollBy({ left: scrollAmount * direction, behavior: 'smooth' });
+      const wrapper = document.querySelector('.card-wrapper');
+      wrapper.scrollBy({
+        left: direction * 250,
+        behavior: 'smooth'
+      });
     }
   </script>
 </body>
