--- a/index.html
+++ b/index.html
@@ -335,17 +335,6 @@
       user-select: none;
       transition: transform 0.3s ease;
     }
-    /* Increased Review 3 image size */
-    .cert-card:nth-child(3) img {
-      max-height: none !important;
-      height: 220px !important;
-      width: auto !important;
-      object-fit: contain;
-      user-select: none;
-      border-radius: 8px;
-      box-shadow: 0 0 25px rgba(0, 191, 255, 0.6);
-      transition: transform 0.3s ease;
-    }
 
     .scroll-btn {
       display: none;
@@ -575,15 +564,15 @@
       <div class="card-wrapper">
         <div class="cert-card">
           <img src="review1.jpg" alt="Review 1" />
-          <p>"Sohyb is extremely patient and communicates clearly."</p>
+          <p>"Thank you very much for your creativity and precision. I recommend that everyone deal with him. He is also known for his patience. Many thanks."</p>
         </div>
         <div class="cert-card">
           <img src="review2.jpg" alt="Review 2" />
-          <p>"Great quality and very professional."</p>
+          <p>"Very cooperative even in modifications I recommend him"</p>
         </div>
         <div class="cert-card">
           <img src="review3.jpg" alt="Review 3" />
-          <p>"Delivered beyond expectations on my website project."</p>
+          <p>"Excellent, very patient, has high communication skills, quick to deliver work, and I recommend dealing with him"</p>
         </div>
       </div>
       <button class="scroll-btn right" onclick="scrollCards(1)">&#8680;</button>
@@ -592,7 +581,9 @@
 
   <footer>
     <p>© 2025 Sohyb — Fullstack Developer & Designer</p>
-    <p><a href="mailto:contact@sohyb.com">contact@sohyb.com</a></p>
+    <p><a href="mailto:sohaib.mohamad.elsayed@gmail.com">sohaib.mohamad.elsayed@gmail.com</a></p>
+    <p><a href="https://github.com/SohaibMohamad">Github</a></p>
+    <p><a href="www.linkedin.com/in/sohaib-mohammad-982298217">Linkedin</a></p>
   </footer>
 
   <script>
