--- a/index.html
+++ b/index.html
@@ -493,7 +493,6 @@
     <div>
       <a href="#projects">Projects</a>
       <a href="#archive">Highlights</a>
-      <a href="#scroll-archive">Certificates</a>
       <a href="#reviews">Reviews</a>
     </div>
   </nav>
@@ -522,13 +521,13 @@
     </div>
 
     <div class="project left">
-      <img src="https://via.placeholder.com/400x250.png?text=Transport+Map" alt="Transport Map" />
+      <img src="map.png" alt="Transport Map" />
       <div class="text">
         <h2>🚍 Transport Map of Egypt</h2>
         <p>Developed a web map using Leaflet.js that visualizes some of Egypt’s main public and private transportation routes, including buses and metro lines not always shown on Google Maps. Built with HTML, CSS, and JS, focusing on clean and solid UX/UI design.
 
-Processed transport data by parsing Google Maps JSON coordinates, using Python to convert them into usable route formats.</p>
-        <p><a href="https://your-transport-map-link.example" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">Visit the website</a></p>
+Processed transport data by my teammate, parsing Google Maps JSON coordinates and sending it to me, then I use Python to convert them into usable route formats. In progress</p>
+        <p><a href="https://sohaibmohamad.github.io/egtransportmap/" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">Visit the website</a></p>
       </div>
     </div>
 
@@ -552,7 +551,7 @@ Processed transport data by parsing Google Maps JSON coordinates, using Python t
         <h2>🌟 Freelance Experience</h2>
         <p>5-star rated freelancer on Mostaql.com with strong experience as a web designer and graphic designer. Skilled in building custom store makers, WordPress sites, and UI panels for clients.
 
-Received 3 positive reviews from recruiters praising communication, patience, and quality of work.</p>
+Received 3 positive reviews from recruiters praising communication, patience, and quality of work. more on my Mostaql portfolio</p>
         <p><a href="https://mostaql.com/profile/YOUR_PROFILE" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View my Mostaql profile</a></p>
       </div>
     </div>
@@ -565,6 +564,7 @@ Received 3 positive reviews from recruiters praising communication, patience, an
       <li>🌟 5 Star Rating On Mostaql</li>
       <li>💻 Stack: HTML, CSS, JS, React, Python, Java, C++</li>
       <li>📜 Bilingual EFSET C2 English Certificate</li>
+      <li>💬 Participated in local competitions with certificates received, like Smart Innovative Competition, UGRF14, and GSEF</li>
     </ul>
   </section>
 
