--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     }
 
     .header-logo {
-      height: 160px;
+      height: 100px;
       width: auto;
       user-select: none;
       filter: drop-shadow(0 0 16px #00bfffcc);
@@ -503,7 +503,7 @@
       <p>Fullstack Developer • CP Enthusiast • UI/UX Designer</p>
       <p class="university">Engineering student at Al-Azhar University, Cairo</p>
     </div>
-    <img src="sohyb.png" alt="Sohyb's Photo" class="profile" />
+    <img src="sohyb.jpeg" alt="Sohyb's Photo" class="profile" />
   </header>
 
   <section id="projects">
