--- a/index.html
+++ b/index.html
@@ -534,8 +534,12 @@ Processed transport data by my teammate, parsing Google Maps JSON coordinates an
     <div class="project left">
       <div class="text">
         <h2>🧳 Trip Planner Web App</h2>
-        <p>A ReactJS app integrating budgeting, planning, and visualization for trips. Features floating UI cards and dynamic charting to track expenses and plans efficiently.
-</p>
+        <p>A modern ReactJS web application built with Vite and styled with CSS, delivering a clean, responsive, and user-friendly UI/UX.
+          This app helps users plan trips efficiently by providing detailed financial tracking for each trip, including expenses and budgets visualized through interactive charts. 
+          It also allows users to create and manage daily tasks, having a well-organized itinerary.
+          The combination of React's component-based architecture with powerful data visualization and task management features offers an intuitive experience for travelers who want to budget, organize, and visualize their journeys seamlessly.
+        </p>
+
         <p><a href="https://github.com/YOUR_GITHUB_USERNAME/trip-planner" target="_blank" rel="noopener" style="color:#00bfff; text-decoration: underline;">View on GitHub</a></p>
       </div>
       <div class="trip-planner-screenshots" id="tripScreens">
